# lisa

./: .dockerignore  .geminiignore  .gitignore  .rust-version  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.isabel  Dockerfile.lisa  GEMINI.md  Makefile  deny.toml  docker-compose.yml  isabel.service  lisa.sublime-project  rust-toolchain.toml  template-v8.db
.github/workflows/: deploy.yml  dockerpublish.yml  pr.yml
alice/: Cargo.toml
alice/src/: action.rs  device.rs  lib.rs  mode.rs  property_type.rs  request.rs  response.rs  service.rs
alice/src/action/response/: capability.rs
alice/src/device/: capability.rs  parameters.rs  property.rs
alice/src/request/: payload.rs
alice/src/state/: capability.rs  property.rs  request.rs  response.rs
conf/: arm64.Dockerfile  docker-compose.yml  mosquitto.conf  mq.conf
elisheba/: Cargo.toml
elisheba/src/: command.rs
elisheva/: Cargo.toml
elisheva/src/: command.rs  lib.rs  sensor_data.rs
isabel/: Cargo.toml
isabel/src/: device.rs  discover.rs  lib.rs  main.rs  message.rs  socket_handler.rs  vacuum.rs
isabel/src/device/: response.rs
isabel/src/message/: encryption.rs
isabel/src/vacuum/: status.rs
lib/_alzhbeta/: Cargo.toml
lib/_alzhbeta/src/: lib.rs
lib/_alzhbeta/src/os/: macos.rs
lib/_alzhbeta/src/os/linux/: hci.rs
lib/_elisheba/: Cargo.toml
lib/_elisheba/src/: command.rs  sensor_data.rs  vacuum_status.rs
lib/alice/: Cargo.toml
lib/alice/src/: device.rs  lib.rs  mode.rs  range.rs  state.rs  toggle.rs
lib/alice/src/action/: request.rs  response.rs
lib/alice/src/action/response/: capability.rs
lib/alice/src/device/: capability.rs  property.rs
lib/alice/src/state/: capability.rs  property.rs  request.rs  response.rs
lib/alisa/: Cargo.toml
lib/alisa/src/: lib.rs  messages.rs  template.rs  ws_client.rs
lib/alisa/src/device/: fan_speed.rs  mod.rs  port.rs  port_name.rs  port_type.rs  room.rs
lib/alisa/src/device_manager/: error.rs
lib/alisa/src/messages/outgoing/: register.rs  sql_request.rs  update_state.rs
lib/alzhbeta/: Cargo.toml
lib/alzhbeta/src/: event.rs
lib/alzhbeta/src/os/: linux.rs  macos.rs  mod.rs
lib/alzhbeta/src/os/linux/: constants.rs  hci.rs
lib/bluetooth/: Cargo.toml  build.rs
lib/bluetooth/src/: data.rs  event.rs  lib.rs
lib/bluetooth/src/os/: linux.rs  macos.rs  mod.rs
lib/bluetooth/src/os/linux/: constants.rs
lib/crypto/: Cargo.toml
lib/crypto/src/: lib.rs  token.rs
lib/crypto/src/cbc/: dec.rs  enc.rs
lib/crypto/src/ebc/: dec.rs
lib/elisheba/: Cargo.toml
lib/elisheba/src/: bytes.rs  command.rs  crypto.rs  lib.rs  packet.rs  sensor_data.rs  token.rs  vacuum_status.rs
lib/inspinia/: Cargo.toml
lib/inspinia/src/: error.rs  lib.rs  template.rs  ws_client.rs
lib/inspinia/src/device/: fan_speed.rs  port_name.rs  port_type.rs  properties.rs  room.rs
lib/inspinia/src/device_manager/: mod.rs
lib/inspinia/src/messages/: mod.rs
lib/inspinia/src/messages/incoming/: update.rs
lib/inspinia/src/messages/outgoing/: keep_alive.rs  register.rs  sql_request.rs  update_state.rs
lib/roborock/: Cargo.toml
lib/roborock/src/: error.rs  lib.rs  local.rs  protocol.rs  util.rs  vacuum.rs
lib/sonoff/: Cargo.toml
lib/sonoff/src/: client.rs  decoder.rs  devices.rs  lib.rs
lib/sonoff/src/client/: discovery.rs  error.rs  parser.rs  request.rs
lib/str_derive/: Cargo.toml  fake_macro.rs
lib/str_derive/src/: lib.rs
lib/topics/: Cargo.toml
lib/topics/src/: elisa.rs  elizabeth.rs  lib.rs
lib/transport/: Cargo.toml
lib/transport/src/: device_id.rs  elisa.rs  elisheba.rs  elizabeth.rs  isabel.rs  lib.rs  topic.rs
lib/transport/src/action/: request.rs  response.rs
lib/transport/src/state/: request.rs  response.rs  update.rs
lib/xiaomi/: Cargo.toml
lib/xiaomi/src/: device.rs  discover.rs  error.rs  lib.rs  message.rs  vacuum.rs
lib/xiaomi/src/device/: response.rs
lib/xiaomi/src/message/: encryption.rs
lib/xiaomi/src/vacuum/: command.rs  command_executor.rs  status.rs
lisa/: Cargo.toml
lisa/src/: auth.html  device_id.rs  device_type.rs  lib.rs  main.rs  room.rs  service.rs  socket_handler.rs  state.rs  update_state.rs
lisa/src/service/auth/: auth_page.rs  authorize.rs  token.rs
lisa/src/service/user/: devices.rs  unlink.rs
lisa/src/types/: device_id.rs  device_type.rs
packaging/deb/env/: elisa.env.example  elisheba.env.example  isabel.env.example
packaging/deb/systemd/: elisa.service  elisheba.service  isabel.service
scripts/: get_room_mapping_local.py  package_deb.sh  render_pi_env.sh
src/: main.rs
