[workspace]
resolver = "2"

members = [
  "bin/alisa", # gateway between MQTT and Yandex.Alisa
  "bin/elisa", # gateway between MQTT and Xiaomi Vacuum Cleaner
# "bin/isabel", # gateway between MQTT and temperature sensors
  "bin/elizabeth", # gateway between MQTT and Inspinia

  "lib/alice", # Yandex.Alisa API types
  "lib/xiaomi", # Xiaomi Vacuum Cleaner communication protocol
  "lib/inspinia", # Inspinia WS API types
  "lib/topics", # MQTT topics
  "lib/str_derive"
]
