[workspace]
resolver = "2"

members = [
  "bin/alisa", # gateway between MQTT and Yandex.Alisa
  "bin/elisa", # gateway between MQTT and Xiaomi Vacuum Cleaner
  "bin/elizabeth", # gateway between MQTT and Inspinia
  "bin/isabel", # gateway between MQTT and temperature sensors

  "lib/alice", # Yandex.Alisa API types
  "lib/bluetooth",
  "lib/inspinia", # Inspinia WS API types
  "lib/str_derive",
  "lib/transport", # MQTT topics and payloads
  "lib/xiaomi", # Xiaomi Vacuum Cleaner communication protocol
]
