[workspace]
resolver = "2"

members = [
  "bin/alisa", # gateway between MQTT and Yandex.Alisa
  "bin/elisa", # gateway between MQTT and Roborock Vacuum Cleaner
  "bin/elisheba",
  "bin/elizabeth", # gateway between MQTT and Inspinia
  "bin/isabel", # gateway between MQTT and temperature sensors

  "lib/alice", # Yandex.Alisa API types
  "lib/bluetooth",
  "lib/crypto",
  "lib/inspinia", # Inspinia WS API types
  "lib/sonoff", # Sonoff LAN API client
  "lib/str_derive",
  "lib/transport", # MQTT topics and payloads
  "lib/roborock", # Roborock Vacuum Cleaner communication protocol
]
