[package]
name = "isabel"
version = "0.1.0"
authors = ["Vladimir Burdukov <chippcheg@gmail.com>"]
edition = "2018"

[dependencies]
elisheba = { path = "../elisheba" }

pretty_env_logger = "0.4"
log = "0.4"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "net", "time", "sync"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_repr = { git = "https://github.com/chipp/serde-repr", branch = "master" }

aes = "0.6"
block-modes = "0.7"
hex-literal = "0.3"
md-5 = "0.9"
