[package]
name = "lisa"
version = "0.1.0"
authors = ["Vladimir Burdukov <chippcheg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alice = { path = "../alice" }

hyper = "0.13"
pretty_env_logger = "0.4"
tokio = { version = "0.2", features = ["macros"] }

bytes = "0.5"
url = "2.0"

jsonwebtoken = "7.2"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1.0"
