[package]
name = "lisa"
version = "0.1.0"
authors = ["Vladimir Burdukov <chippcheg@gmail.com>"]
edition = "2018"

[dependencies]
alice = { path = "../alice" }

pretty_env_logger = "0.4"
log = "0.4"

hyper = "0.13"
tokio = { version = "0.2", features = ["macros"] }

bytes = "0.5"
url = "2.0"

jsonwebtoken = "7.2"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
