[package]
name = "alisa"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"

tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "net", "time"] }
futures-util = "0.3.25"

hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-tls = "0.5.0"

md5 = "0.7.0"

rusqlite = "0.28.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
