[package]
name = "alzhbeta"
version = "0.1.0"
authors = ["Vladimir Burdukov <chippcheg@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "sync"] }
enumflags2 = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
core_bluetooth = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
