[package]
name = "bluetooth"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
tokio = { version = "1", features = ["sync"] }
enumflags2 = "0.7"
nix = { version = "0.31.1", features = ["ioctl"] }

[target.'cfg(target_os = "macos")'.dependencies]
core_bluetooth = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nix = "0.31.1"

[build-dependencies]
pkg-config = "*"
