[package]
name = "elisheba"
version = "0.1.0"
authors = ["Vladimir Burdukov <chippcheg@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

aes-gcm-siv = { version = "0.9", features = ["std"] }
rand = "0.8"

[dev-dependencies]
serde_json = "1.0"
hex-literal = "0.3"
