[package]
name = "inspinia"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"

tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tokio = { version = "1", features = ["fs", "net", "sync"] }
futures-util = "0.3"

chipp_http = "1.1"

md5 = "0.7"

rusqlite = "0.31"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["std", "clock"], default-features = false }
chrono-humanize = "0.2"

zip = { version = "0.6", default-features = false, features = ["deflate"] }
