[package]
name = "inspinia"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"

tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tokio = { version = "1", features = ["fs", "io-util", "net", "sync"] }
futures-util = "0.3"

chipp_http = "1.2"

md5 = "0.7"

rusqlite = "0.34"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["std", "clock"], default-features = false }
chrono-humanize = "0.2"

zip = { version = "3.0", default-features = false, features = ["deflate"] }
