[package]
name = "roborock"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
crc32fast = "1.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "net", "time", "macros", "rt-multi-thread"] }
