[package]
name = "sonoff"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto = { path = "../crypto" }
base64 = "0.22"

log = "0.4"
futures-util = { version = "0.3.30", features = ["sink"] }
tokio-util = { version = "0.7.10", features = ["full", "codec"] }

dns-parser = "0.8"
serde_json = "1.0"
socket2 = "0.5"

[dependencies.tokio]
version = "1.37"
features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
]
