[package]
name = "sonoff"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto = { path = "../crypto" }

log = "0.4"
futures-util = { version = "0.3.31", features = ["sink"] }
tokio-util = { version = "0.7.12", features = ["full", "codec"] }

base64 = "0.22"
chipp_http = "1.2"
dns-parser = "0.8"
rand = "0.8"
socket2 = "0.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.tokio]
version = "1.41"
features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
]
