[package]
name = "transport"
version = "0.1.0"
edition = "2021"

[dependencies]
str_derive = { path = "../str_derive" }

paho-mqtt = "0.12.5"

serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.11", features = ["v4", "fast-rng", "serde"] }
log = "0.4"

[dev-dependencies]
serde_json = "1.0"
