[package]
name = "transport"
version = "0.1.0"
edition = "2021"

[dependencies]
str_derive = { path = "../str_derive" }

paho-mqtt = "0.13.2"

serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.16", features = ["v4", "fast-rng", "serde"] }
log = "0.4"

[dev-dependencies]
serde_json = "1.0"
