[package]
name = "xiaomi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }

log = "0.4"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "net", "time", "sync"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_repr = "0.1"
cipher = "0.4"

md-5 = "0.10"

# can be removed when migrate to Rust 1.75
# https://github.com/rust-lang/rust/pull/115822
async-trait = "0.1"

[dev-dependencies]
hex-literal = "0.4"
mockall = "*"

[features]
stub = []
